--- a/tests/styles/chicago-author-date/style.cfg
+++ b/tests/styles/chicago-author-date/style.cfg
@@ -1,23 +1,51 @@
-[style-opt]
+[metadata]
 
-
-[citation-opt]
-
-
-[bibliography-opt]
-
-
-[lib]
-macros: 
-citation-sort:
-bibliography-sort:
 
 [locales-en]
-opts: 
-dates:
-terms:
+opts: none
+dates: none
+terms: none
 
-[layouts]
-citation:
-bibliography:<bibliography>
- </bibliography>
+[citation]
+disambiguate-add-givenname: true
+disambiguate-add-names: true
+disambiguate-add-year-suffix: true
+et-al-min: 4
+et-al-subsequent-min: 4
+et-al-subsequent-use-first: 1
+et-al-use-first: 1
+sort: none
+layout:<layout delimiter="; " prefix="(" suffix=")">
+    <group delimiter=", ">
+      <group delimiter=" ">
+        <text macro="contributors-short" />
+        <text macro="date" />
+      </group>
+      <text macro="point-locators" />
+    </group>
+  </layout>
+
+
+[bibliography]
+entry-spacing: 0
+et-al-min: 11
+et-al-use-first: 7
+hanging-indent: true
+subsequent-author-substitute: ---
+sort:Mcontributors-issued
+layout:<layout suffix=".">
+    <text macro="contributors" suffix=". " />
+    <text macro="date" suffix=". " />
+    <text macro="title" />
+    <text macro="description" />
+    <text macro="secondary-contributors" prefix=". " />
+    <text macro="container-title" prefix=". " />
+    <text macro="container-contributors" />
+    <text macro="locators-chapter" />
+    <text macro="edition" prefix=". " />
+    <text macro="locators" />
+    <text macro="collection-title" prefix=". " />
+    <text macro="issue" />
+    <text macro="locators-article" />
+    <text macro="access" prefix=". " />
+  </layout>
