A little work in the styles testing area.  Splits out Chicago author-date macros to separate files, and adds a style.cfg file that covers all of the style's parameters.  Next step is to build the style from the config file (at some point in the future, if the wysiwyg discussions don't eventually revive themselves).

--- a/tests/styles/chicago-author-date/style.cfg
+++ b/tests/styles/chicago-author-date/style.cfg
@@ -1,10 +1,21 @@
 [metadata]
-
+version: 1.0
+class: in-text
+# default-locale: none
+title: Chicago Manual of Style (Author-Date format)
+id: http://www.zotero.org/styles/chicago-author-date
+self: http://www.zotero.org/styles/chicago-author-date
+author: Julian Onions <julian.onions@gmail.com>
+format: author-date
+field: generic-base
+summary: The author-date variant of the 
+  Chicago style
+documentation: http://www.chicagomanualofstyle.org/tools_citationguide.html
 
 [locales-en]
-opts: none
-dates: none
-terms: none
+# opts: none
+# dates: none
+# terms: none
 
 [citation]
 disambiguate-add-givenname: true
@@ -14,7 +25,7 @@ et-al-min: 4
 et-al-subsequent-min: 4
 et-al-subsequent-use-first: 1
 et-al-use-first: 1
-sort: none
+# sort: none
 layout:<layout delimiter="; " prefix="(" suffix=")">
     <group delimiter=", ">
       <group delimiter=" ">
@@ -32,7 +43,7 @@ et-al-min: 11
 et-al-use-first: 7
 hanging-indent: true
 subsequent-author-substitute: ---
-sort:Mcontributors-issued
+sort:contributors-issued
 layout:<layout suffix=".">
     <text macro="contributors" suffix=". " />
     <text macro="date" suffix=". " />
