--- a/tests/config/test.cnf
+++ b/tests/config/test.cnf
@@ -2,7 +2,10 @@
 command: /home/bennett/src/jslibs/Linux_32_opt/jshost -u
 
 [rhino]
-command: java -client -jar ./rhino/js-1.7R2.jar -opt 8
+command: java -client -jar ./rhino/js-1.7R3.jar -opt 8
+
+[rhino-json]
+command: java -client -jar ./rhino/js-1.7R3.jar -opt 8
 
 [style]
 testdirs: /home/bennett/src/mlz-styles
