--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "locale"]
 	path = locale
 	url = git@github.com:citation-style-language/locales.git
+[submodule "csl-schemata/csl"]
+	path = csl-schemata/csl
+	url = https://github.com/citation-style-language/schema.git
+[submodule "csl-schemata/csl-m"]
+	path = csl-schemata/csl-m
+	url = https://github.com/Juris-M/schema.git
