Add docs as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "csl-schemata/csl-m"]
 	path = csl-schemata/csl-m
 	url = https://github.com/Juris-M/schema.git
+[submodule "docs"]
+	path = docs
+	url = https://github.com/Juris-M/citeproc-js-docs.git
